finalizada primera parte del maquetado

--- a/vistas/index.html
+++ b/vistas/index.html
@@ -11,15 +11,15 @@
       <img src="/logo-mercado-liebre.svg" alt="logo" />
       <p>Barra de busqueda</p>
       <lu>
-        <li>Buscar Productos</li>
-        <li>tiendas Oficiales</li>
-        <li>Vender</li>
-        <li>Ayuda</li>
+        <li><a href="#ofertas">Ofertas</a></li>
+        <li><a href="#tiendas-oficiales">tiendas Oficiales</a></li>
+        <li><a href="#vender">Vender</a></li>
+        <li><a href="#ayuda">Ayuda</a></li>
       </lu>
       <lu>
-        <li>Crea tu cuenta</li>
-        <li>Ingresá</li>
-        <li>Mis compras</li>
+        <li><a href="#tu-cuenta"> tu cuenta</a></li>
+        <li><a href="#ingresa">Ingresá</a></li>
+        <li><a href="#mis-compras">Mis compras</a></li>
       </lu>
     </header>
     <section class="section">
