se agregan estilos

--- a/vistas/index.html
+++ b/vistas/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -19,38 +27,53 @@
       <lu>
         <li><a href="#tu-cuenta"> tu cuenta</a></li>
         <li><a href="#ingresa">Ingresá</a></li>
-        <li><a href="#mis-compras">Mis compras</a></li>
+        <li>
+          <a href="#mis-compras">Mis compras</a
+          ><i class="fas fa-shopping-cart"></i>
+        </li>
       </lu>
     </header>
     <section class="section">
-      <p>Basado en tu ultima visita</p>
-      <p>Ofertas</p>
+      <p class="titulares">Basado en tu ultima visita</p>
       <article>
         <img src="img-cafetera-moulinex.jpg" alt="" />
-        <p>$6770</p>
-        <p>40% OFF</p>
-        <p>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
+        <i class="fas fa-truck"></i>
+        <p class="precios">$6770</p>
+        <p class="descuentos">40% OFF</p>
+        <p class="descripciones">
+          Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+        </p>
       </article>
       <article>
         <img src="img-macbook-pro-2019.jpg" alt="" />
-        <p>$230.000</p>
-        <p>20% OFF</p>
-        <p>Macbook Pro 2019 Lorem ipsum, dolor sit amet</p>
+        <i class="fas fa-truck"></i>
+        <p class="precios">$230.000</p>
+        <p class="descuentos">20% OFF</p>
+        <p class="descripciones">
+          Macbook Pro 2019 Lorem ipsum, dolor sit amet
+        </p>
       </article>
       <article>
         <img src="img-samsung-galaxy-s10.jpg" alt="" />
-        <p>$70.500</p>
-        <p>15% OFF</p>
-        <p>Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p>
+        <i class="fas fa-truck"></i>
+        <p class="precios">$70.500</p>
+        <p class="descuentos">15% OFF</p>
+        <p class="descripciones">
+          Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.
+        </p>
       </article>
       <article>
         <img src="img-samsung-galaxy-s10.jpg" alt="" />
-        <p>$34.000</p>
-        <p>5% OFF</p>
-        <p>SmartTv Samsung 43" Lorem ipsum, dolor sit amet</p>
+        <i class="fas fa-truck"></i>
+        <p class="precios">$34.000</p>
+        <p class="descuentos">5% OFF</p>
+        <p class="descripciones">
+          SmartTv Samsung 43" Lorem ipsum, dolor sit amet
+        </p>
       </article>
     </section>
     <footer>
+      <i class="far fa-credit-card"></i>
       <p>Pagá con tarjeta o en efectivo</p>
       <p>
         Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen
