--- a/vistas/index.html
+++ b/vistas/index.html
@@ -1,95 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <img src="/logo-mercado-liebre.svg" alt="logo" />
-      <p>Barra de busqueda</p>
-      <lu>
-        <li><a href="#ofertas">Ofertas</a></li>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header id="encabezado">
+    <img src="/logo-mercado-liebre.svg" alt="logo" />
+    <div class="barra-busqueda input-icons">
+      <input type="text" name="" id="" placeholder="ingrese el producto buscar" />
+    </div>
+    <nav id="nav-menu">
+      <ul>
+        <li ><a href="#ofertas">Ofertas</a><i class="fas fa-store"></i></li>
         <li><a href="#tiendas-oficiales">tiendas Oficiales</a></li>
-        <li><a href="#vender">Vender</a></li>
-        <li><a href="#ayuda">Ayuda</a></li>
-      </lu>
-      <lu>
-        <li><a href="#tu-cuenta"> tu cuenta</a></li>
-        <li><a href="#ingresa">Ingresá</a></li>
+        <li><a href="#vender">Vender</a><i class="fas fa-dollar-sign"></i></li>
+        <li><a href="#ayuda">Ayuda</a><i class="fas fa-question-circle"></i></li>
         <li>
-          <a href="#mis-compras">Mis compras</a
-          ><i class="fas fa-shopping-cart"></i>
+          <a href="/register"> Creá tu cuenta</a>
+          <i class="fas fa-user-circle"></i>
         </li>
-      </lu>
-    </header>
-    <section class="section">
-      <p class="titulares">Basado en tu ultima visita</p>
-      <article>
-        <img src="img-cafetera-moulinex.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$6770</p>
-        <p class="descuentos">40% OFF</p>
-        <p class="descripciones">
-          Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-        </p>
-      </article>
-      <article>
-        <img src="img-macbook-pro-2019.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$230.000</p>
-        <p class="descuentos">20% OFF</p>
-        <p class="descripciones">
-          Macbook Pro 2019 Lorem ipsum, dolor sit amet
-        </p>
-      </article>
-      <article>
-        <img src="img-samsung-galaxy-s10.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$70.500</p>
-        <p class="descuentos">15% OFF</p>
-        <p class="descripciones">
-          Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.
-        </p>
-      </article>
-      <article>
-        <img src="img-samsung-galaxy-s10.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$34.000</p>
-        <p class="descuentos">5% OFF</p>
-        <p class="descripciones">
-          SmartTv Samsung 43" Lorem ipsum, dolor sit amet
-        </p>
-      </article>
-    </section>
-    <footer>
-      <i class="far fa-credit-card"></i>
-      <p>Pagá con tarjeta o en efectivo</p>
-      <p>
-        Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen
-        puntos de pago. ¡Y siempre es seguro!
+        <li>
+          <a href="#ingresa">Ingresá</a> <i class="fas fa-sign-in-alt"></i>
+        </li>
+        <li>
+          <a href="#mis-compras">Mis compras</a>
+          <i class="fas fa-shopping-basket"></i>
+        </li>
+
+
+    </nav>
+  </header>
+
+  <section id="section">
+    <div class="section-ultima-visita">
+      Basado en tu ultima visita
+    </div>
+    <article>
+      <img src="img-cafetera-moulinex.jpg" alt="" />
+      <i class="fas fa-truck"></i>
+      <p class="precios">$6770</p>
+      <p class="descuentos">40% OFF</p>
+      <p class="descripciones">
+        Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
       </p>
-      <p>Envío gratis desde los $ 2.500</p>
-      <p>
-        Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles
-        de productos. Es un beneficio de MercadoPuntos
+    </article>
+    <article>
+      <img src="img-macbook-pro-2019.jpg" alt="" />
+      <i class="fas fa-truck"></i>
+      <p class="precios">$230.000</p>
+      <p class="descuentos">20% OFF</p>
+      <p class="descripciones">
+        Macbook Pro 2019 Lorem ipsum, dolor sit amet
       </p>
-      <p>Seguridad, de principio a fin</p>
-      <p>
-        ¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas
-        hacer porque estás siempre prtegid@.
+    </article>
+    <article>
+      <img src="img-samsung-galaxy-s10.jpg" alt="" />
+      <i class="fas fa-truck"></i>
+      <p class="precios">$70.500</p>
+      <p class="descuentos">15% OFF</p>
+      <p class="descripciones">
+        Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.
       </p>
-      <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-    </footer>
-  </body>
+    </article>
+    <article>
+      <img src="img-samsung-galaxy-s10.jpg" alt="" />
+      <i class="fas fa-truck"></i>
+      <p class="precios">$34.000</p>
+      <p class="descuentos">5% OFF</p>
+      <p class="descripciones">
+        SmartTv Samsung 43" Lorem ipsum, dolor sit amet
+      </p>
+    </article>
+  </section>
+  <footer>
+    <i class="far fa-credit-card"></i>
+    <p>Pagá con tarjeta o en efectivo</p>
+    <p>
+      Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen
+      puntos de pago. ¡Y siempre es seguro!
+    </p>
+    <p>Envío gratis desde los $ 2.500</p>
+    <p>
+      Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles
+      de productos. Es un beneficio de MercadoPuntos
+    </p>
+    <p>Seguridad, de principio a fin</p>
+    <p>
+      ¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas
+      hacer porque estás siempre prtegid@.
+    </p>
+    <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+  </footer>
+</body>
+
 </html>
