se agrega media query responsive y estilos para articulos

--- a/vistas/index.html
+++ b/vistas/index.html
@@ -12,13 +12,17 @@
 
 <body>
   <header id="encabezado">
-    <img src="/logo-mercado-liebre.svg" alt="logo" />
-    <div class="barra-busqueda input-icons">
-      <input type="text" name="" id="" placeholder="ingrese el producto buscar" />
+    <img class="logo" src="/logo-mercado-liebre.svg" alt="logo" />
+    <div class="barra-busqueda-container">
+      <input class="barra-busqueda" type="text" name="" id="" placeholder="ingrese el producto buscar" />
     </div>
+    <div class="menu-container">
+      <a href=""><i class="fas fa-bars menu-btn"></i></a>
+    </div>
+    
     <nav id="nav-menu">
       <ul>
-        <li ><a href="#ofertas">Ofertas</a><i class="fas fa-store"></i></li>
+        <li><a href="#ofertas">Ofertas</a><i class="fas fa-store"></i></li>
         <li><a href="#tiendas-oficiales">tiendas Oficiales</a></li>
         <li><a href="#vender">Vender</a><i class="fas fa-dollar-sign"></i></li>
         <li><a href="#ayuda">Ayuda</a><i class="fas fa-question-circle"></i></li>
@@ -33,70 +37,203 @@
           <a href="#mis-compras">Mis compras</a>
           <i class="fas fa-shopping-basket"></i>
         </li>
-
-
     </nav>
   </header>
 
-  <section id="section">
-    <div class="section-ultima-visita">
-      Basado en tu ultima visita
-    </div>
-    <article>
-      <img src="img-cafetera-moulinex.jpg" alt="" />
-      <i class="fas fa-truck"></i>
-      <p class="precios">$6770</p>
-      <p class="descuentos">40% OFF</p>
-      <p class="descripciones">
-        Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-      </p>
-    </article>
-    <article>
-      <img src="img-macbook-pro-2019.jpg" alt="" />
-      <i class="fas fa-truck"></i>
-      <p class="precios">$230.000</p>
-      <p class="descuentos">20% OFF</p>
-      <p class="descripciones">
-        Macbook Pro 2019 Lorem ipsum, dolor sit amet
-      </p>
-    </article>
-    <article>
-      <img src="img-samsung-galaxy-s10.jpg" alt="" />
-      <i class="fas fa-truck"></i>
-      <p class="precios">$70.500</p>
-      <p class="descuentos">15% OFF</p>
-      <p class="descripciones">
-        Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.
-      </p>
-    </article>
-    <article>
-      <img src="img-samsung-galaxy-s10.jpg" alt="" />
-      <i class="fas fa-truck"></i>
-      <p class="precios">$34.000</p>
-      <p class="descuentos">5% OFF</p>
-      <p class="descripciones">
-        SmartTv Samsung 43" Lorem ipsum, dolor sit amet
-      </p>
-    </article>
+  <section id="banner">
+    <img src="/img-home-banner.jpg" alt="">
   </section>
+
+  <main>
+    <div id="main-ultima-visita">
+      <p class="main-ultima-visita-titulo">Basado en tu ultima visita</p>
+      <div class="articles">
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <!-- <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripciones">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article> -->
+      </div>
+
+    </div>
+
+    <div class="main-ofertas">
+      <p>Ofertas</p>
+      <article>
+        <img src="img-cafetera-moulinex.jpg" alt="" />
+        <i class="fas fa-truck"></i>
+        <p class="precios">$6770</p>
+        <p class="descuentos">40% OFF</p>
+        <p class="descripciones">
+          Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+        </p>
+      </article>
+      <article>
+        <img src="img-macbook-pro-2019.jpg" alt="" />
+        <i class="fas fa-truck"></i>
+        <p class="precios">$230.000</p>
+        <p class="descuentos">20% OFF</p>
+        <p class="descripciones">
+          Macbook Pro 2019 Lorem ipsum, dolor sit amet
+        </p>
+      </article>
+      <article>
+        <img src="img-samsung-galaxy-s10.jpg" alt="" />
+        <i class="fas fa-truck"></i>
+        <p class="precios">$70.500</p>
+        <p class="descuentos">15% OFF</p>
+        <p class="descripciones">
+          Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.
+        </p>
+      </article>
+    </div>
+  </main>
   <footer>
-    <i class="far fa-credit-card"></i>
-    <p>Pagá con tarjeta o en efectivo</p>
-    <p>
-      Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen
-      puntos de pago. ¡Y siempre es seguro!
-    </p>
-    <p>Envío gratis desde los $ 2.500</p>
-    <p>
-      Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles
-      de productos. Es un beneficio de MercadoPuntos
-    </p>
-    <p>Seguridad, de principio a fin</p>
-    <p>
-      ¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas
-      hacer porque estás siempre prtegid@.
-    </p>
-    <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+
+    <article>
+      <i class="far fa-credit-card"></i>
+      <p>Pagá con tarjeta o en efectivo</p>
+      <p>
+        Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen
+        puntos de pago. ¡Y siempre es seguro!
+      </p>
+
+    </article>
+
+    <article>
+      <p>Envío gratis desde los $ 2.500</p>
+      <p>
+        Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles
+        de productos. Es un beneficio de MercadoPuntos
+      </p>
+    </article>
+
+    <article>
+      <p>Seguridad, de principio a fin</p>
+      <p>
+        ¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas
+        hacer porque estás siempre prtegid@.
+      </p>
+    </article>
+    <div>
+      Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+    </div>
   </footer>
 </body>
 
