se agrega footer y ofertas con estilos css

--- a/vistas/index.html
+++ b/vistas/index.html
@@ -45,6 +45,7 @@
   </section>
 
   <main>
+    <!-- Ultima Visita -->
     <div id="main-ultima-visita">
       <p class="main-ultima-visita-titulo">Basado en tu ultima visita</p>
       <div class="articles">
@@ -60,178 +61,98 @@
           </div>
         </article>
         <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <img src="img-macbook-pro-2019.jpg" alt="" />
           <div class="main-article-detail-container">
             <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
+            <p class="precios">$220.000</p>
+            <p class="descuentos">20% OFF</p>
             <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+              Macbook Pro 2019
             </p>
           </div>
         </article>
         <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <img src="img-samsung-galaxy-s10.jpg" alt="" />
           <div class="main-article-detail-container">
             <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
+            <p class="precios">$70.500</p>
+            <p class="descuentos">10% OFF</p>
             <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+              Teléfono movil Samsung Galaxy S10
             </p>
           </div>
         </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripcion">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article>
-        <!-- <article>
-          <img src="img-cafetera-moulinex.jpg" alt="" />
-          <div class="main-article-detail">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
-            <p class="descripciones">
-              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-            </p>
-          </div>
-        </article> -->
       </div>
-
     </div>
-
-    <div class="main-ofertas">
-      <p>Ofertas</p>
-      <article>
-        <img src="img-cafetera-moulinex.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$6770</p>
-        <p class="descuentos">40% OFF</p>
-        <p class="descripciones">
-          Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
-        </p>
-      </article>
-      <article>
-        <img src="img-macbook-pro-2019.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$230.000</p>
-        <p class="descuentos">20% OFF</p>
-        <p class="descripciones">
-          Macbook Pro 2019 Lorem ipsum, dolor sit amet
-        </p>
-      </article>
-      <article>
-        <img src="img-samsung-galaxy-s10.jpg" alt="" />
-        <i class="fas fa-truck"></i>
-        <p class="precios">$70.500</p>
-        <p class="descuentos">15% OFF</p>
-        <p class="descripciones">
-          Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.
-        </p>
-      </article>
+    <!-- OFERTAS -->
+    <div id="main-ofertas">
+      <p class="main-ofertas-titulo">Ofertas</p>
+      <div class="articles">
+        <article>
+          <img src="img-cafetera-moulinex.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$6770</p>
+            <p class="descuentos">40% OFF</p>
+            <p class="descripcion">
+              Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-macbook-pro-2019.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$220.000</p>
+            <p class="descuentos">20% OFF</p>
+            <p class="descripcion">
+              Macbook Pro 2019
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="img-samsung-galaxy-s10.jpg" alt="" />
+          <div class="main-article-detail-container">
+            <i class="fas fa-truck"></i>
+            <p class="precios">$70.500</p>
+            <p class="descuentos">10% OFF</p>
+            <p class="descripcion">
+              Teléfono movil Samsung Galaxy S10
+            </p>
+          </div>
+        </article>
+      </div>
     </div>
   </main>
+  <!-- FOOTER -->
   <footer>
-
-    <article>
+    <div>
       <i class="far fa-credit-card"></i>
-      <p>Pagá con tarjeta o en efectivo</p>
+      <p class="footer-titles">Pagá con tarjeta o en efectivo</p>
       <p>
         Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen
         puntos de pago. ¡Y siempre es seguro!
       </p>
+    </div>
 
-    </article>
-
-    <article>
-      <p>Envío gratis desde los $ 2.500</p>
+    <div>
+      <i class="fas fa-gift"></i>
+      <p class="footer-titles">Envío gratis desde los $ 2.500</p>
       <p>
         Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles
         de productos. Es un beneficio de MercadoPuntos
       </p>
-    </article>
-
-    <article>
-      <p>Seguridad, de principio a fin</p>
+    </div>
+      
+    <div>
+      <i class="fas fa-user-shield"></i>
+      <p class="footer-titles">Seguridad, de principio a fin</p>
       <p>
         ¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas
         hacer porque estás siempre prtegid@.
       </p>
-    </article>
-    <div>
+    </div>
+    <div class="footer-copyright">
       Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </div>
   </footer>
