--- a/vistas/index.html
+++ b/vistas/index.html
@@ -14,9 +14,9 @@
   <header id="encabezado">
     <div class="header-logo-busqueda">
       <img class="logo-ml" src="/logo-mercado-liebre.svg" alt="logo" />
-      <div class="header-barra-busqueda-container mr-top-10 mr-left-10">
-        <div>
-          <input type="text" name="" id="" placeholder="ingrese el producto buscar" />
+      <div class="header-barra-busqueda-container">
+        <div class="header-barra-busqueda">
+          <input class="barra-busqueda" type="text" name="" id="" placeholder="ingrese el producto buscar" />
         </div>
         <div>
           <i class="fas fa-search lupa"></i>
@@ -194,36 +194,19 @@
         <article>
           <img src="img-cafetera-moulinex.jpg" alt="" />
           <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$6770</p>
-            <p class="descuentos">40% OFF</p>
+            <div class="article-truck-container">
+              <i class="fas fa-truck"></i>
+            </div>
+            <div class="article-price-discount-container">
+              <p class="precios">$6770</p>
+              <p class="descuentos">40% OFF</p>
+            </div>
+            
             <p class="descripcion">
               Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.
             </p>
           </div>
-        </article>
-        <article>
-          <img src="img-macbook-pro-2019.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$220.000</p>
-            <p class="descuentos">20% OFF</p>
-            <p class="descripcion">
-              Macbook Pro 2019
-            </p>
-          </div>
-        </article>
-        <article>
-          <img src="img-samsung-galaxy-s10.jpg" alt="" />
-          <div class="main-article-detail-container">
-            <i class="fas fa-truck"></i>
-            <p class="precios">$70.500</p>
-            <p class="descuentos">10% OFF</p>
-            <p class="descripcion">
-              Teléfono movil Samsung Galaxy S10
-            </p>
-          </div>
-        </article>
+        </article> 
       </div>
     </div>
   </main>
